* fixed about page - cropped mockup.png - added logo and title * changed heading title in both reset&forgotpwd

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -5,6 +5,22 @@ main{
     align-items: center;
 }
 
+#about-head{
+    display: flex;
+    align-items: center;
+    padding-top: 30px;
+}
+
+#about-logo{
+    width: 150px;
+    object-fit: cover;
+}
+
+#about-title{
+    font-size: 5rem;
+    margin:0;
+}
+
 h4{
     font-weight:lighter;
 }
@@ -12,22 +28,34 @@ h4{
 .section-box{
     max-width: 1500px;
     width:100vw;
+    align-items: center;
+    justify-content: center;
+}
+
+main > section:first-child{
+    flex-direction: column;
 }
 
 .content-box{
-    border:1px,solid,white;
     max-width:1500px;
     max-height: 700px;
-    padding: 2rem 3rem;
     flex-direction: column;
     align-content: center;
     justify-content: center;
 }
 
+#about-content{
+    display: flex;
+}
+
+#description{
+    padding: 5px 0 60px 100px;
+}
+
 #mockup{
-    max-width:550px;
-    width: 250vw;
-    max-height: 550px;
+    width: 420px;
+    padding: 5px 100px 60px;
+    object-fit: cover;
 }
 
 #intro-subtitle {
@@ -48,10 +76,9 @@ h4{
 
 .dev-photo{
     border-radius:50%;
-    max-width:500px;
-    max-height:500px;
-    width:10vw;
-    height:10vw;
+    width:260px;
+    height:260px;
+    object-fit: cover;
 }
 
 #qr-code{
@@ -60,7 +87,6 @@ h4{
 }
 
 .content-box2{
-    border:1px,solid,white;
     max-width:1500px;
     max-height: 700px;
     width:100vw;
